@@ -641,6 +641,41 @@ operator|.
 name|class
 argument_list|)
 decl_stmt|;
+comment|/**    * A wrapper arround<code>Currency.getInstance</code> that returns null    * instead of throwing<code>IllegalArgumentException</code>    * if the specified Currency does not exist in this JVM.    *    * @see Currency#getInstance(String)    */
+DECL|method|getCurrency
+specifier|public
+specifier|static
+name|Currency
+name|getCurrency
+parameter_list|(
+specifier|final
+name|String
+name|code
+parameter_list|)
+block|{
+try|try
+block|{
+return|return
+name|Currency
+operator|.
+name|getInstance
+argument_list|(
+name|code
+argument_list|)
+return|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|e
+parameter_list|)
+block|{
+comment|/* :NOOP: */
+block|}
+return|return
+literal|null
+return|;
+block|}
 annotation|@
 name|Override
 DECL|method|init
@@ -757,20 +792,14 @@ expr_stmt|;
 block|}
 if|if
 condition|(
-name|java
-operator|.
-name|util
-operator|.
-name|Currency
-operator|.
-name|getInstance
+literal|null
+operator|==
+name|getCurrency
 argument_list|(
 name|this
 operator|.
 name|defaultCurrency
 argument_list|)
-operator|==
-literal|null
 condition|)
 block|{
 throw|throw
@@ -783,7 +812,7 @@ name|ErrorCode
 operator|.
 name|BAD_REQUEST
 argument_list|,
-literal|"Invalid currency code "
+literal|"Default currency code is not supported by this JVM: "
 operator|+
 name|this
 operator|.
@@ -1919,10 +1948,10 @@ name|serialVersionUID
 init|=
 literal|1L
 decl_stmt|;
-DECL|field|targetCurrencyCode
+DECL|field|targetCurrency
 specifier|private
-name|String
-name|targetCurrencyCode
+name|Currency
+name|targetCurrency
 decl_stmt|;
 DECL|field|currencyValues
 specifier|private
@@ -1962,10 +1991,36 @@ name|sfield
 expr_stmt|;
 name|this
 operator|.
-name|targetCurrencyCode
+name|targetCurrency
 operator|=
+name|getCurrency
+argument_list|(
 name|targetCurrencyCode
+argument_list|)
 expr_stmt|;
+if|if
+condition|(
+literal|null
+operator|==
+name|targetCurrency
+condition|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|BAD_REQUEST
+argument_list|,
+literal|"Currency code not supported by this JVM: "
+operator|+
+name|targetCurrencyCode
+argument_list|)
+throw|;
+block|}
 name|SchemaField
 name|amountField
 init|=
@@ -2208,7 +2263,10 @@ name|currency
 operator|.
 name|equals
 argument_list|(
-name|targetCurrencyCode
+name|targetCurrency
+operator|.
+name|getCurrencyCode
+argument_list|()
 argument_list|)
 condition|)
 block|{
@@ -2232,6 +2290,63 @@ name|doc
 argument_list|)
 return|;
 block|}
+block|}
+comment|/** throws a (Server Error) SolrException if the code is not valid */
+specifier|private
+name|Currency
+name|getDocCurrency
+parameter_list|(
+name|int
+name|doc
+parameter_list|,
+name|int
+name|currencyOrd
+parameter_list|)
+block|{
+name|String
+name|code
+init|=
+name|getDocCurrencyCode
+argument_list|(
+name|doc
+argument_list|,
+name|currencyOrd
+argument_list|)
+decl_stmt|;
+name|Currency
+name|c
+init|=
+name|getCurrency
+argument_list|(
+name|code
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+literal|null
+operator|==
+name|c
+condition|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+literal|"Currency code of document is not supported by this JVM: "
+operator|+
+name|code
+argument_list|)
+throw|;
+block|}
+return|return
+name|c
+return|;
 block|}
 annotation|@
 name|Override
@@ -2362,12 +2477,7 @@ condition|)
 block|{
 name|targetFractionDigits
 operator|=
-name|Currency
-operator|.
-name|getInstance
-argument_list|(
-name|targetCurrencyCode
-argument_list|)
+name|targetCurrency
 operator|.
 name|getDefaultFractionDigits
 argument_list|()
@@ -2417,7 +2527,10 @@ name|getExchangeRate
 argument_list|(
 name|sourceCurrencyCode
 argument_list|,
-name|targetCurrencyCode
+name|targetCurrency
+operator|.
+name|getCurrencyCode
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
@@ -2436,16 +2549,6 @@ operator|-
 literal|1
 condition|)
 block|{
-name|String
-name|sourceCurrencyCode
-init|=
-name|getDocCurrencyCode
-argument_list|(
-name|doc
-argument_list|,
-name|currencyOrd
-argument_list|)
-decl_stmt|;
 name|sourceFractionDigits
 operator|=
 name|fractionDigitCache
@@ -2453,11 +2556,11 @@ index|[
 name|currencyOrd
 index|]
 operator|=
-name|Currency
-operator|.
-name|getInstance
+name|getDocCurrency
 argument_list|(
-name|sourceCurrencyCode
+name|doc
+argument_list|,
+name|currencyOrd
 argument_list|)
 operator|.
 name|getDefaultFractionDigits
@@ -2467,10 +2570,10 @@ block|}
 block|}
 else|else
 block|{
-name|String
-name|sourceCurrencyCode
+name|Currency
+name|source
 init|=
-name|getDocCurrencyCode
+name|getDocCurrency
 argument_list|(
 name|doc
 argument_list|,
@@ -2483,19 +2586,20 @@ name|provider
 operator|.
 name|getExchangeRate
 argument_list|(
-name|sourceCurrencyCode
+name|source
+operator|.
+name|getCurrencyCode
+argument_list|()
 argument_list|,
-name|targetCurrencyCode
+name|targetCurrency
+operator|.
+name|getCurrencyCode
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|sourceFractionDigits
 operator|=
-name|Currency
-operator|.
-name|getInstance
-argument_list|(
-name|sourceCurrencyCode
-argument_list|)
+name|source
 operator|.
 name|getDefaultFractionDigits
 argument_list|()
@@ -2762,23 +2866,23 @@ operator|)
 operator|&&
 operator|!
 operator|(
-name|targetCurrencyCode
+name|targetCurrency
 operator|!=
 literal|null
 condition|?
 operator|!
-name|targetCurrencyCode
+name|targetCurrency
 operator|.
 name|equals
 argument_list|(
 name|that
 operator|.
-name|targetCurrencyCode
+name|targetCurrency
 argument_list|)
 else|:
 name|that
 operator|.
-name|targetCurrencyCode
+name|targetCurrency
 operator|!=
 literal|null
 operator|)
@@ -2795,11 +2899,11 @@ block|{
 name|int
 name|result
 init|=
-name|targetCurrencyCode
+name|targetCurrency
 operator|!=
 literal|null
 condition|?
-name|targetCurrencyCode
+name|targetCurrency
 operator|.
 name|hashCode
 argument_list|()
@@ -3623,7 +3727,7 @@ name|SolrException
 operator|.
 name|ErrorCode
 operator|.
-name|BAD_REQUEST
+name|SERVER_ERROR
 argument_list|,
 literal|"Exchange rate missing attributes (required: from, to, rate) "
 operator|+
@@ -3652,31 +3756,14 @@ name|exchangeRate
 decl_stmt|;
 if|if
 condition|(
-name|java
+literal|null
+operator|==
+name|CurrencyField
 operator|.
-name|util
-operator|.
-name|Currency
-operator|.
-name|getInstance
+name|getCurrency
 argument_list|(
 name|fromCurrency
 argument_list|)
-operator|==
-literal|null
-operator|||
-name|java
-operator|.
-name|util
-operator|.
-name|Currency
-operator|.
-name|getInstance
-argument_list|(
-name|toCurrency
-argument_list|)
-operator|==
-literal|null
 condition|)
 block|{
 throw|throw
@@ -3687,11 +3774,39 @@ name|SolrException
 operator|.
 name|ErrorCode
 operator|.
-name|BAD_REQUEST
+name|SERVER_ERROR
 argument_list|,
-literal|"Could not find from currency specified in exchange rate: "
+literal|"Specified 'from' currency not supported in this JVM: "
 operator|+
-name|rateNode
+name|fromCurrency
+argument_list|)
+throw|;
+block|}
+if|if
+condition|(
+literal|null
+operator|==
+name|CurrencyField
+operator|.
+name|getCurrency
+argument_list|(
+name|toCurrency
+argument_list|)
+condition|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+literal|"Specified 'to' currency not supported in this JVM: "
+operator|+
+name|toCurrency
 argument_list|)
 throw|;
 block|}
@@ -3724,7 +3839,7 @@ name|SolrException
 operator|.
 name|ErrorCode
 operator|.
-name|BAD_REQUEST
+name|SERVER_ERROR
 argument_list|,
 literal|"Could not parse exchange rate: "
 operator|+
@@ -3761,7 +3876,7 @@ name|SolrException
 operator|.
 name|ErrorCode
 operator|.
-name|BAD_REQUEST
+name|SERVER_ERROR
 argument_list|,
 literal|"Error parsing currency config."
 argument_list|,
@@ -3783,7 +3898,7 @@ name|SolrException
 operator|.
 name|ErrorCode
 operator|.
-name|BAD_REQUEST
+name|SERVER_ERROR
 argument_list|,
 literal|"Error parsing currency config."
 argument_list|,
@@ -3805,7 +3920,7 @@ name|SolrException
 operator|.
 name|ErrorCode
 operator|.
-name|BAD_REQUEST
+name|SERVER_ERROR
 argument_list|,
 literal|"Error parsing currency config."
 argument_list|,
@@ -3827,7 +3942,7 @@ name|SolrException
 operator|.
 name|ErrorCode
 operator|.
-name|BAD_REQUEST
+name|SERVER_ERROR
 argument_list|,
 literal|"Error parsing currency config."
 argument_list|,
@@ -3848,7 +3963,7 @@ name|SolrException
 argument_list|(
 name|ErrorCode
 operator|.
-name|BAD_REQUEST
+name|SERVER_ERROR
 argument_list|,
 literal|"Error while opening Currency configuration file "
 operator|+
@@ -3985,7 +4100,7 @@ name|SolrException
 argument_list|(
 name|ErrorCode
 operator|.
-name|BAD_REQUEST
+name|SERVER_ERROR
 argument_list|,
 literal|"Needs ResourceLoader in order to load config file"
 argument_list|)
@@ -4136,13 +4251,9 @@ block|}
 name|Currency
 name|currency
 init|=
-name|java
+name|CurrencyField
 operator|.
-name|util
-operator|.
-name|Currency
-operator|.
-name|getInstance
+name|getCurrency
 argument_list|(
 name|code
 argument_list|)
@@ -4164,7 +4275,7 @@ name|ErrorCode
 operator|.
 name|BAD_REQUEST
 argument_list|,
-literal|"Invalid currency code "
+literal|"Currency code not supported by this JVM: "
 operator|+
 name|code
 argument_list|)
