@@ -1,0 +1,38 @@
+<?xml version="1.0" ?>
+<!--
+ Licensed to the Apache Software Foundation (ASF) under one or more
+ contributor license agreements.  See the NOTICE file distributed with
+ this work for additional information regarding copyright ownership.
+ The ASF licenses this file to You under the Apache License, Version 2.0
+ (the "License"); you may not use this file except in compliance with
+ the License.  You may obtain a copy of the License at
+
+     http://www.apache.org/licenses/LICENSE-2.0
+
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
+-->
+
+<schema name="bad-schema-currency-ft-bogus-code-in-xml" version="1.4">
+  <types>
+    <fieldType name="string" class="solr.StrField" multiValued="true"/>
+    <!-- BEGIN BAD STUFF: bad-currency.xml has bogus code-->
+    <fieldType name="currency" 
+               class="solr.CurrencyField"
+               defaultCurrency="USD"
+               currencyConfig="bad-currency.xml"
+               multiValued="false" />
+ </types>
+
+ <fields>
+   <field name="id" type="string" indexed="true" stored="true" multiValued="false"/>
+   <field name="money" type="currency" indexed="true" stored="true" />
+ </fields>
+
+ <defaultSearchField>id</defaultSearchField>
+ <uniqueKey>id</uniqueKey>
+
+</schema>
