@@ -264,6 +264,29 @@ literal|"ratesFileLocation"
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testCurrencyBogusCode
+specifier|public
+name|void
+name|testCurrencyBogusCode
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|doTest
+argument_list|(
+literal|"bad-schema-currency-ft-bogus-default-code.xml"
+argument_list|,
+literal|"HOSS"
+argument_list|)
+expr_stmt|;
+name|doTest
+argument_list|(
+literal|"bad-schema-currency-ft-bogus-code-in-xml.xml"
+argument_list|,
+literal|"HOSS"
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|testPerFieldtypeSimButNoSchemaSimFactory
 specifier|public
 name|void
